Responsive mode: fixed included visibility style

--- a/assets/scss/frontend/frontend.scss
+++ b/assets/scss/frontend/frontend.scss
@@ -13,6 +13,4 @@
 @import "_widgets";
 
 // Visibility
-body.elementor-editor-preview {
-	@import "_visibility";
-}
+@import "_visibility";
